@@ -2,16 +2,18 @@ partman-auto (73) UNRELEASED; urgency=low
 
   * Moved definitions.sh to ./lib/base.sh. Requires partman-base (>= 114).
   * Move recipes.sh and auto-shared.sh to ./lib/.
-  * auto-shared.sh: let wipe_disk() use the create_new_label function provided
-    by partman-partitioning (54). Don't prompt for disk label to use unless
-    the default is invalid.
-    Patch is based on a change first proposed by Jérémy Bobbio in #396023.
+  * auto-shared.sh: rename wipe_disk() to auto_init_disk().
+  * Use functions provided by partman-partitioning in auto_init_disk():
+    - use the create_new_label function; don't prompt for disk label to use
+      unless the default is invalid
+    - create_new_label will now take care of removing existing LVM data from
+      the selected device; the actual code to erase existing LVM data has been
+      moved to partman-lvm
+    Changes inspired by and partially based on a patch proposed in #396023 by
+    Jérémy Bobbio. Requires partman-partitioning (>= 54).
   * Major whitespace cleanup and some coding style improvements.
-  * Move code to erase existing LVM data from a device to partman-lvm.
-    Requires partman-lvm (>= 57).
-  * Rename wipe_disk() to auto_init_disk().
 
- -- Frans Pop <fjp@debian.org>  Sat, 08 Dec 2007 16:51:37 +0100
+ -- Frans Pop <fjp@debian.org>  Sat, 08 Dec 2007 20:20:47 +0100
 
 partman-auto (72) unstable; urgency=low
 
